# antlr4cpptest

./: .gitignore  CMakeLists.txt  README.md  generate.sh
src/: Test.g4  main.cpp
